# gdp_analysis_engine

./: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  app.py  pyproject.toml  run.py
.github/workflows/: ci.yml
data/: analysis_log.csv
data/cache/: consumer_sentiment.parquet  core_cpi.parquet  cpi.parquet  dxy.parquet  fed_funds.parquet  gdp.parquet  nfp.parquet  pmi.parquet  treasury_10y.parquet  treasury_2y.parquet  treasury_3m.parquet  unemployment.parquet
include/: gdp_engine.hpp
python/: analytics.py  data_collector.py  reporting.py
src/: add.cpp  backtest.cpp  bindings.cpp  gdp_engine.cpp  statistics.cpp
