[build-system]
requires = ["scikit-build-core>=0.5.0", "pybind11>=2.10"]
build-backend = "scikit_build_core.build"

[project]
name = "gdp_engine"
version = "0.1.0"
description = "GDP Analysis Engine — hybrid C++/Python macro signal platform"
requires-python = ">=3.9"
dependencies = [
    "pybind11>=2.10",
    "numpy>=1.21",
    "matplotlib>=3.5",
    "pandas>=1.3",
    "debugpy>=1.6",
    "flask>=3.0",
    "flask-cors>=4.0",
    "fredapi>=0.5",
    "plotly>=5.18",
    "scipy>=1.11",
    "python-dotenv>=1.0",
    "scikit-learn>=1.0",
    "waitress>=2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1"
]

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.args = [
    "-DCMAKE_OSX_DEPLOYMENT_TARGET=10.15",
    "-DCMAKE_CXX_STANDARD=17"
]
sdist.include = ["src/*", "include/*", "CMakeLists.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
